[package]
    name    = "stackoverflow-api"
    version = "0.1.0"

    authors = ["Jade Lynn Masker <donottellmetonottellyou@gmail.com>"]

    edition = "2021"

[dependencies]
    rocket = { version = "0.5.0-rc.3", features = ["json"] }
    serde  = { version = "1.0", features = ["derive"] }
    tokio  = { version = "1", features = ["full"] }
