[package]
    name    = "stackoverflow-api"
    version = "0.1.0"

    authors = ["Jade Lynn Masker <donottellmetonottellyou@gmail.com>"]

    edition = "2021"

[dependencies]
    dotenvy           = "0.15.*"
    log               = "0.4.*"
    pretty_env_logger = "0.5.*"
    tokio             = { version = "1.*", features = ["full"] }
    rocket            = { version = "0.5.0-rc.3", features = ["json"] }
    serde             = { version = "1.*", features = ["derive"] }
    sqlx              = { version = "0.7.*", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
